--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -1,42 +1,69 @@
 .main {
   #video-logo {
-    background: #8A69FF;
-    min-height: 130vw;
+    background: #8570f6;
+    min-height: 150vh;
     position: relative;
     overflow: hidden;
 
     @media only screen and (min-width: $md-min-width) {
-      min-height: 75vw;
+      min-height: 100vh;
     }
 
     video {
       display: block;
       position: absolute;
-      width: 250vw;
-      max-width: 250vw;
-      top: 2vw;
-      left: -75vw;
+      width: 350vw;
+      max-width: 350vw;
+      top: -15vw;
+      left: -125vw;
       right: 0;
       bottom: 0;
 
       @media only screen and (min-width: $md-min-width) {
-        width: 140vw;
-        max-width: 140vw;
-        top: 2vw;
-        left: -20vw;
+        width: auto;
+        max-width: none;
+        height: calc( 130vh - 10vw - 32px );
+        margin-top: -2vh;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
       }
     }
     .border {
       @media only screen and (min-width: $md-min-width) {
         position: absolute;
-        background: url("/assets/media/word-frame.png");
-        background-size: 100% auto;
-        background-repeat: no-repeat;
-        z-index: 9999;
         top: 5vw;
-        bottom: 5vw;
+        bottom: auto;
         right: 5vw;
         left: 5vw;
+        overflow: hidden;
+        background: url("/assets/media/guide-to-masculinity-bg.png");
+        background-size: auto 100%;
+        background-repeat: repeat-x;
+        z-index: 9999;
+        height: 16px;
+
+        &.left, &.right {
+          left: 5vw;
+          top: calc( 5vw + 16px );
+          bottom: calc( 5vw + 22px );
+          right: auto;
+          height: auto;
+          width: 16px;
+          background: url("/assets/media/guide-to-masculinity-bg-vertical.png");
+          background-size: 100% auto;
+          background-repeat:repeat;
+
+          &.right {
+            right: 5vw;
+            left: auto;
+          }
+        }
+
+        &.bottom {
+          top: auto;
+          bottom: 5vw;
+        }
       }
     }
   }
@@ -46,21 +73,24 @@
     text-align: center;
 
     @media only screen and (min-width: $md-min-width) {
+      display: flex;
+      align-items: center;
       margin: 10vw;
     }
 
     h1 {
       display: block;
       width: 100%;
+      margin: 0 auto 5vw;
       font-size: 12vw;
 
       @media only screen and (min-width: $md-min-width) {
         font-size: 5vw;
+        margin: 0;
       }
     }
 
     #mc_embed_signup {
-      width: 100%;
 
       #mc_embed_signup_scroll {
         display: flex;
@@ -88,7 +118,7 @@
         }
 
         &[type=submit] {
-          background: #8A69FF;
+          background: #8570f6;
           color: #fff;
           text-transform: uppercase;
           font-weight: bold;
@@ -168,13 +198,13 @@
       }
 
       a {
-        color: #8A69FF;
+        color: #8570f6;
         border-bottom: 1px solid transparent;
         transition: all 250ms ease-in;
 
         &:hover {
           color: #000;
-          border-bottom: 1px solid #8A69FF;
+          border-bottom: 1px solid #8570f6;
         }
       }
     }
