--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -1,7 +1,7 @@
 .main {
   #video-logo {
     background: #8570f6;
-    min-height: 150vh;
+    min-height: 150vw;
     position: relative;
     overflow: hidden;
 
@@ -75,6 +75,7 @@
     @media only screen and (min-width: $md-min-width) {
       display: flex;
       align-items: center;
+      justify-content: space-around;
       margin: 10vw;
     }
 
@@ -87,6 +88,7 @@
       @media only screen and (min-width: $md-min-width) {
         font-size: 5vw;
         margin: 0;
+        width: auto;
       }
     }
 
@@ -108,13 +110,21 @@
       input {
         border: none;
         border-radius: 0;
-        padding: 1vw 4vw 1vw;
+        padding: 1vw 3vw 1vw;
         height: 10vw;
+        min-width: 20vw;
         outline: none;
+        color: #8570f6;
+
+        &::placeholder {
+          color: #000;
+          opacity: 1;
+        }
 
         @media only screen and (min-width: $md-min-width) {
           padding: .5vw 2vw .75vw;
           height: 4vw;
+          min-width: none;
         }
 
         &[type=submit] {
@@ -126,6 +136,7 @@
           display: block;
           line-height: 4vw;
           padding: 0 2vw 0;
+          min-width: none;
 
           @media only screen and (min-width: $md-min-width) {
             padding: 0 4vw 0;
